# itf

./: .gitignore  README.md  ast.go  cli.go  diff.go  diff_fix.go  file_manager.go  fs.go  go.mod  go.sum  interface.go  itf.go  model.go  nvim.go  parser.go  patcher.go  pyproject.toml  requirement.txt  source.go  state.go  tui.go
cli/: cli.go
cmd/itf/: main.go
docs/Api/: README.md
docs/Develop/: README.md
docs/Installation/: README.md
docs/Usage/: README.md
internal/nvim/: nvim.go
internal/parser/: parser.go
internal/patcher/: patcher.go
internal/state/: state.go
internal/tui/: tui.go
itf/: interface.go  itf.go
src/itf/: __main__.py  app.py  diff_corrector.py  editor.py  parser.py  patcher.py  path_resolver.py  printer.py  source.py  state.py  state_manager.py
src/itf.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/itf/actions/: __init__.py  auto.py  base.py  block.py  diff.py  diff_fix.py  redo.py  revert.py
